--- a/MassSpecFilesBootstrap/MassSpecFilesBootstrap.csproj
+++ b/MassSpecFilesBootstrap/MassSpecFilesBootstrap.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{475C3B7B-4367-4BC8-8192-2A850C72812B}</ProjectGuid>
+    <ProjectGuid>{912B3FF1-4DF6-4EA7-971D-F6F6A751D369}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SoftwareLockMass</RootNamespace>
-    <AssemblyName>SoftwareLockMass</AssemblyName>
+    <RootNamespace>MassSpecFilesBootstrap</RootNamespace>
+    <AssemblyName>MassSpecFilesBootstrap</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -32,8 +32,8 @@
     </DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <PlatformTarget>x64</PlatformTarget>
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Chemistry, Version=1.0.63.0, Culture=neutral, processorArchitecture=AMD64">
@@ -48,8 +48,12 @@
       <HintPath>..\packages\MathNet.Numerics.3.11.1\lib\net40\MathNet.Numerics.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Proteomics, Version=1.0.15.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\packages\Proteomics.1.0.15\lib\net451\Proteomics.dll</HintPath>
+    <Reference Include="mzIdentML, Version=1.0.43.0, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>..\packages\MassSpecFiles.1.0.43\lib\mzIdentML.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="MzML, Version=1.0.43.0, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>..\packages\MassSpecFiles.1.0.43\lib\MzML.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Spectra, Version=1.0.0.0, Culture=neutral, processorArchitecture=AMD64">
@@ -65,31 +69,32 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="Thermo, Version=1.0.43.0, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>..\packages\MassSpecFiles.1.0.43\lib\Thermo.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="UsefulProteomicsDatabases, Version=1.0.13.0, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>..\packages\UsefulProteomicsDatabases.1.0.13\lib\net451\UsefulProteomicsDatabases.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Zlib.Portable, Version=1.11.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Zlib.Portable.1.11.0\lib\portable-net4+sl5+wp8+win8+wpa81+MonoTouch+MonoAndroid\Zlib.Portable.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CalibrationFunctions\CalibrationFunction.cs" />
-    <Compile Include="CalibrationFunctions\CalibrationFunctionClustering.cs" />
-    <Compile Include="CalibrationFunctions\CalibrationFunctionHack.cs" />
-    <Compile Include="CalibrationFunctions\CalibrationFunctionHackMean.cs" />
-    <Compile Include="CalibrationFunctions\ConstantCalibrationFunction.cs" />
-    <Compile Include="CalibrationFunctions\CubicCalibrationFunction.cs" />
-    <Compile Include="CalibrationFunctions\DataPoint.cs" />
-    <Compile Include="CalibrationFunctions\IdentityCalibrationFunction.cs" />
-    <Compile Include="CalibrationFunctions\KDTree.cs" />
-    <Compile Include="CalibrationFunctions\KDTreeCalibrationFunction.cs" />
-    <Compile Include="CalibrationFunctions\LinearCalibrationFunction.cs" />
-    <Compile Include="CalibrationFunctions\MedianCalibrationFunction.cs" />
-    <Compile Include="CalibrationFunctions\QuadraticCalibrationFunction.cs" />
-    <Compile Include="CalibrationFunctions\QuarticCalibrationFunction.cs" />
-    <Compile Include="CalibrationFunctions\TrainingPoint.cs" />
-    <Compile Include="SoftwareLockMassParams.cs" />
-    <Compile Include="SoftwareLockMassRunner.cs" />
+    <Compile Include="Class1.cs" />
+    <Compile Include="MzidIdentifications.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config">
-      <SubType>Designer</SubType>
-    </None>
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SoftwareLockMass\SoftwareLockMass.csproj">
+      <Project>{475C3B7B-4367-4BC8-8192-2A850C72812B}</Project>
+      <Name>SoftwareLockMass</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
