--- a/SoftwareLockMassCommandLine/SoftwareLockMassCommandLine.csproj
+++ b/SoftwareLockMassCommandLine/SoftwareLockMassCommandLine.csproj
@@ -52,32 +52,32 @@
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Chemistry, Version=1.0.63.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\packages\Chemistry.1.0.63\lib\net451\Chemistry.dll</HintPath>
+    <Reference Include="Chemistry, Version=1.0.56.0, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>..\packages\Chemistry.1.0.56\lib\net451\Chemistry.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="MassSpectrometry, Version=1.0.63.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\packages\MassSpectrometry.1.0.63\lib\net451\MassSpectrometry.dll</HintPath>
+    <Reference Include="MassSpectrometry, Version=1.0.62.0, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>..\packages\MassSpectrometry.1.0.62\lib\net451\MassSpectrometry.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="MathNet.Numerics, Version=3.11.1.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\MathNet.Numerics.3.11.1\lib\net40\MathNet.Numerics.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="mzIdentML, Version=1.0.43.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\packages\MassSpecFiles.1.0.43\lib\mzIdentML.dll</HintPath>
+    <Reference Include="mzIdentML, Version=1.0.42.0, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>..\packages\MassSpecFiles.1.0.42\lib\mzIdentML.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="MzML, Version=1.0.43.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\packages\MassSpecFiles.1.0.43\lib\MzML.dll</HintPath>
+    <Reference Include="MzML, Version=1.0.42.0, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>..\packages\MassSpecFiles.1.0.42\lib\MzML.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Proteomics, Version=1.0.15.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\packages\Proteomics.1.0.15\lib\net451\Proteomics.dll</HintPath>
+    <Reference Include="Proteomics, Version=1.0.12.0, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>..\packages\Proteomics.1.0.12\lib\net451\Proteomics.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Spectra, Version=1.0.0.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\packages\MassSpectrometry.1.0.63\lib\net451\Spectra.dll</HintPath>
+      <HintPath>..\packages\MassSpectrometry.1.0.62\lib\net451\Spectra.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -89,8 +89,12 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="Thermo, Version=1.0.43.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\packages\MassSpecFiles.1.0.43\lib\Thermo.dll</HintPath>
+    <Reference Include="Thermo, Version=1.0.42.0, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>..\packages\MassSpecFiles.1.0.42\lib\Thermo.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="UsefulProteomicsDatabases, Version=1.0.12.0, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>..\packages\UsefulProteomicsDatabases.1.0.12\lib\net451\UsefulProteomicsDatabases.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Zlib.Portable, Version=1.11.0.0, Culture=neutral, processorArchitecture=MSIL">
@@ -109,10 +113,6 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\MassSpecFilesBootstrap\MassSpecFilesBootstrap.csproj">
-      <Project>{912b3ff1-4df6-4ea7-971d-f6f6a751d369}</Project>
-      <Name>MassSpecFilesBootstrap</Name>
-    </ProjectReference>
     <ProjectReference Include="..\SoftwareLockMass\SoftwareLockMass.csproj">
       <Project>{475C3B7B-4367-4BC8-8192-2A850C72812B}</Project>
       <Name>SoftwareLockMass</Name>
