--- a/SoftwareLockMassGUI/packages.config
+++ b/SoftwareLockMassGUI/packages.config
@@ -1,9 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Chemistry" version="1.0.63" targetFramework="net451" />
-  <package id="MassSpecFiles" version="1.0.43" targetFramework="net451" />
-  <package id="MassSpectrometry" version="1.0.63" targetFramework="net451" />
+  <package id="Chemistry" version="1.0.56" targetFramework="net451" />
+  <package id="MassSpecFiles" version="1.0.42" targetFramework="net451" />
+  <package id="MassSpectrometry" version="1.0.62" targetFramework="net451" />
   <package id="MathNet.Numerics" version="3.11.1" targetFramework="net451" />
-  <package id="Proteomics" version="1.0.15" targetFramework="net451" />
+  <package id="Proteomics" version="1.0.12" targetFramework="net451" />
+  <package id="UsefulProteomicsDatabases" version="1.0.12" targetFramework="net451" />
   <package id="Zlib.Portable" version="1.11.0" targetFramework="net451" />
 </packages>
