--- a/SoftwareLockMassGUI/SoftwareLockMassGUI.csproj
+++ b/SoftwareLockMassGUI/SoftwareLockMassGUI.csproj
@@ -40,34 +40,6 @@
     <RunPostBuildEvent>OnOutputUpdated</RunPostBuildEvent>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Chemistry, Version=1.0.71.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\packages\Chemistry.1.0.71\lib\net451\Chemistry.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="MassSpectrometry, Version=1.0.70.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\packages\MassSpectrometry.1.0.70\lib\net451\MassSpectrometry.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="MathNet.Numerics, Version=3.11.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\MathNet.Numerics.3.11.1\lib\net40\MathNet.Numerics.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="mzIdentML, Version=1.0.44.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\packages\MassSpecFiles.1.0.44\lib\mzIdentML.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="MzML, Version=1.0.44.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\packages\MassSpecFiles.1.0.44\lib\MzML.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Proteomics, Version=1.0.19.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\packages\Proteomics.1.0.19\lib\net451\Proteomics.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Spectra, Version=1.0.0.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\packages\MassSpectrometry.1.0.70\lib\net451\Spectra.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Numerics" />
@@ -80,18 +52,6 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
-    <Reference Include="Thermo, Version=1.0.44.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\packages\MassSpecFiles.1.0.44\lib\Thermo.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="UsefulProteomicsDatabases, Version=1.0.15.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\packages\UsefulProteomicsDatabases.1.0.15\lib\net451\UsefulProteomicsDatabases.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Zlib.Portable, Version=1.11.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Zlib.Portable.1.11.0\lib\portable-net4+sl5+wp8+win8+wpa81+MonoTouch+MonoAndroid\Zlib.Portable.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Form1.cs">
@@ -100,7 +60,6 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="MzidIdentifications.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
@@ -116,9 +75,6 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <None Include="packages.config">
-      <SubType>Designer</SubType>
-    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -133,6 +89,10 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\SoftwareLockMassIO\SoftwareLockMassIO.csproj">
+      <Project>{06ad5939-8437-4f2a-bf3c-2b181d6f0308}</Project>
+      <Name>SoftwareLockMassIO</Name>
+    </ProjectReference>
     <ProjectReference Include="..\SoftwareLockMass\SoftwareLockMass.csproj">
       <Project>{475C3B7B-4367-4BC8-8192-2A850C72812B}</Project>
       <Name>SoftwareLockMass</Name>
