--- a/SoftwareLockMassIO/SoftwareLockMassIO.csproj
+++ b/SoftwareLockMassIO/SoftwareLockMassIO.csproj
@@ -4,16 +4,18 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{475C3B7B-4367-4BC8-8192-2A850C72812B}</ProjectGuid>
+    <ProjectGuid>{06AD5939-8437-4F2A-BF3C-2B181D6F0308}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SoftwareLockMass</RootNamespace>
-    <AssemblyName>SoftwareLockMass</AssemblyName>
+    <RootNamespace>SoftwareLockMassIO</RootNamespace>
+    <AssemblyName>SoftwareLockMassIO</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>x64</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -21,37 +23,48 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <PlatformTarget>x64</PlatformTarget>
-    <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>x64</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>
-    </DefineConstants>
+    <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-    <PlatformTarget>x64</PlatformTarget>
+  </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Chemistry">
+    <Reference Include="Chemistry, Version=1.0.73.0, Culture=neutral, processorArchitecture=AMD64">
       <HintPath>..\packages\Chemistry.1.0.73\lib\net451\Chemistry.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="MassSpectrometry">
+    <Reference Include="MassSpectrometry, Version=1.0.70.0, Culture=neutral, processorArchitecture=AMD64">
       <HintPath>..\packages\MassSpectrometry.1.0.70\lib\net451\MassSpectrometry.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="MathNet.Numerics, Version=3.11.1.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\MathNet.Numerics.3.11.1\lib\net40\MathNet.Numerics.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="mzIdentML, Version=1.0.47.0, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>..\packages\MassSpecFiles.1.0.47\lib\mzIdentML.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="MzML, Version=1.0.47.0, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>..\packages\MassSpecFiles.1.0.47\lib\MzML.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Proteomics, Version=1.0.21.0, Culture=neutral, processorArchitecture=AMD64">
       <HintPath>..\packages\Proteomics.1.0.21\lib\net451\Proteomics.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Spectra">
+    <Reference Include="Spectra, Version=1.0.0.0, Culture=neutral, processorArchitecture=AMD64">
       <HintPath>..\packages\MassSpectrometry.1.0.70\lib\net451\Spectra.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -62,35 +75,33 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="Thermo, Version=1.0.47.0, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>..\packages\MassSpecFiles.1.0.47\lib\Thermo.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="UsefulProteomicsDatabases, Version=1.0.15.0, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>..\packages\UsefulProteomicsDatabases.1.0.15\lib\net451\UsefulProteomicsDatabases.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Zlib.Portable, Version=1.11.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Zlib.Portable.1.11.0\lib\portable-net4+sl5+wp8+win8+wpa81+MonoTouch+MonoAndroid\Zlib.Portable.dll</HintPath>
       <Private>True</Private>
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CalibrationFunctions\CalibrationFunction.cs" />
-    <Compile Include="CalibrationFunctions\CalibrationFunctionClustering.cs" />
-    <Compile Include="CalibrationFunctions\CalibrationFunctionHack.cs" />
-    <Compile Include="CalibrationFunctions\CalibrationFunctionHackMean.cs" />
-    <Compile Include="CalibrationFunctions\ConstantCalibrationFunction.cs" />
-    <Compile Include="CalibrationFunctions\CubicCalibrationFunction.cs" />
-    <Compile Include="CalibrationFunctions\DataPoint.cs" />
-    <Compile Include="CalibrationFunctions\IdentityCalibrationFunction.cs" />
-    <Compile Include="CalibrationFunctions\KDTree.cs" />
-    <Compile Include="CalibrationFunctions\KDTreeCalibrationFunction.cs" />
-    <Compile Include="CalibrationFunctions\LinearCalibrationFunction.cs" />
-    <Compile Include="CalibrationFunctions\MedianCalibrationFunction.cs" />
-    <Compile Include="CalibrationFunctions\QuadraticCalibrationFunction.cs" />
-    <Compile Include="CalibrationFunctions\QuarticCalibrationFunction.cs" />
-    <Compile Include="CalibrationFunctions\TrainingPoint.cs" />
-    <Compile Include="SoftwareLockMassParams.cs" />
-    <Compile Include="SoftwareLockMassRunner.cs" />
+    <Compile Include="IO.cs" />
+    <Compile Include="MzidIdentifications.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config">
-      <SubType>Designer</SubType>
-    </None>
+    <None Include="App.config" />
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SoftwareLockMass\SoftwareLockMass.csproj">
+      <Project>{475C3B7B-4367-4BC8-8192-2A850C72812B}</Project>
+      <Name>SoftwareLockMass</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
