--- a/SoftwareLockMass/SoftwareLockMass.csproj
+++ b/SoftwareLockMass/SoftwareLockMass.csproj
@@ -35,24 +35,24 @@
     <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Chemistry, Version=1.0.80.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\packages\Chemistry.1.0.80\lib\net451\Chemistry.dll</HintPath>
+    <Reference Include="Chemistry, Version=1.0.101.0, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>..\packages\Chemistry.1.0.101\lib\net451\Chemistry.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="MassSpectrometry, Version=1.0.72.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\packages\MassSpectrometry.1.0.72\lib\net451\MassSpectrometry.dll</HintPath>
+    <Reference Include="MassSpectrometry, Version=1.0.75.0, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>..\packages\MassSpectrometry.1.0.75\lib\net451\MassSpectrometry.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="MathNet.Numerics, Version=3.11.1.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\MathNet.Numerics.3.11.1\lib\net40\MathNet.Numerics.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Proteomics, Version=1.0.23.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\packages\Proteomics.1.0.23\lib\net451\Proteomics.dll</HintPath>
+    <Reference Include="Proteomics, Version=1.0.26.0, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>..\packages\Proteomics.1.0.26\lib\net451\Proteomics.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Spectra, Version=1.0.0.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\packages\MassSpectrometry.1.0.72\lib\net451\Spectra.dll</HintPath>
+      <HintPath>..\packages\MassSpectrometry.1.0.75\lib\net451\Spectra.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -85,6 +85,8 @@
     <Compile Include="CalibrationFunctions\QuadraticCalibrationFunction.cs" />
     <Compile Include="CalibrationFunctions\QuarticCalibrationFunction.cs" />
     <Compile Include="CalibrationFunctions\TrainingPoint.cs" />
+    <Compile Include="Calibrators.cs" />
+    <Compile Include="TrainingPointsExtractor.cs" />
     <Compile Include="SoftwareLockMassParams.cs" />
     <Compile Include="SoftwareLockMassRunner.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
