--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ script:
 - mono ./testrunner/NUnit.ConsoleRunner.*/tools/nunit3-console.exe ./Test/bin/Release/Test.dll
 - tar -zcvf MonoCommandLine.tar.gz -C SoftwareLockMassCommandLine/bin/Release .
 - mono ./SoftwareLockMassCommandLine/bin/Release/SoftwareLockMassCommandLine.exe Test/myFile.mzML
-  Test/myIdentifications.mzid 0 0.032
+  Test/myIdentifications.mzid
 deploy:
   provider: releases
   file: MonoCommandLine.tar.gz
