--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ script:
 - xbuild /p:Configuration=TestAndRelease SoftwareLockMass.sln
 - mono ./testrunner/NUnit.ConsoleRunner.*/tools/nunit3-console.exe ./Test/bin/Release/Test.dll
 - tar -zcvf MonoCommandLine.tar.gz -C SoftwareLockMassCommandLine/bin/Release .
-- mono ./SoftwareLockMassCommandLine/bin/Release/SoftwareLockMassCommandLine.exe Test/myFile.mzML
+- mono ./SoftwareLockMassCommandLine/bin/Release/SoftwareLockMassCommandLine.exe Test/myFakeFile.mzML
   Test/myIdentifications.mzid
 deploy:
   provider: releases
